--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta2 
  	- Added catalog drop down back to quick random play form
  	- Added bandwidth throttling to downloads, must be enabled in config
		(Thx pb1dft)
  	- Added loose name compare and rename functions to help with sorting
		similar artist names (Thx SpComb)
  	- Fixed a problem with not being able to add Albums to a playlist
		(Thx eudaimon)
  	- Fixed a problem with browsing genres that would incorrectly put
		'Browse' in the Showing Genres Starting With: box
  	- Fixed some unescaped ID's in class constructors. 
  	- Added debug_level config option to allow fine tunning of logging
  	- Fixed catalog functions hopefully increasing speed and removing a bug
		with fast search
  	- Fixed cookie code to account for violation of RFC's by IIS 5 where
		in IIS 5 fails to send cookie header on a header redirect
		(Thx Paul Webb)
  	- Fixed verification of Batch Downloading, if ZLIB isn't detected it
		will not even give you the link
  	- Added remember_length which defines the length that a 'remember me'
		session will last, default is 900 or 15 min
  	- Fixed truncated names on tool-tip text (Thx Patrik)
  	- Fixed a few more Search snafu's that caused it to not remember
		what you had selected after performing a search (Thx Rubin)
  	- Fixed ordering of playlist m3u generation
  	- Fixed ratings images to use Javascript hotness (Thx burnsides)
  	- Fixed a catalog update bug that was introduced when I switched 
		over to vauth. 
	- Fixed some minor Local Play display/consistency issues (Thx Morgan)
  	- Fixed disable/enable functions which were incorrectly referencing
		session variables to check for permission (always failed)